--- a/style.css
+++ b/style.css
@@ -1,14 +1,97 @@
+:root {
+    --color-black: #272635;
+    --color-gray-1: #a6a6a8;
+    --color-gray-2: #cecece;
+    --color-white: #FFF;
+    --color-offwhite: #e8e9f3;
+    --color-primary: #b1e5f2;
+}
+
 html, body {
+    box-sizing: border-box;
+    font-size: 62.5%;
+    font-family: 'lato';
+    font-weight: 800;
     margin: 0px;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 .panel-container {
     min-height: 100vh;
     display: flex;
-    align-items: stretch;
 }
 
 .panel {
-    flex: 1 1 auto;
-    border: 1px solid red;
+    color: var(--color-white);
+    flex: 1;
+    text-align: center;
+    align-items: center;
+    font-size: 3rem;
+    background-size: cover;
+    background-position: center;
+
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    transition: all 300ms ease-in-out;
+}
+
+.panel:hover {
+    flex-grow: 2;
+}
+
+.panel-backdrop {
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(3px);
+
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.panel-coding {
+    background-image: url('static/coding-background.png'); /* fallback */
+    background-image: linear-gradient(
+        to right bottom,
+        transparent,
+        var(--color-black)),
+        url('static/coding-background.png');
+    background-position: left;
+}
+
+.panel-music { 
+    background-image: linear-gradient(
+        to right bottom,
+        transparent,
+        var(--color-black)),
+        url('static/music-background.jpg');
+}
+
+.panel-other { 
+    background-image: linear-gradient(
+        to right bottom,
+        transparent,
+        var(--color-black)),
+        url('');
+}
+
+p {
+    border-right: .1rem solid var(--color-offwhite);
+    border-left: .1rem solid var(--color-offwhite);
+    padding-top: 1rem;
+    padding-bottom: 1.3rem;
+    background-color: var(--color-black);
+}
+
+.panel:last-child p {
+    border-right: none;
+}
+
+.panel:first-child p {
+    border-left: none;
 }
