made link text sizing responsive

--- a/style.css
+++ b/style.css
@@ -24,6 +24,24 @@ html, body {
     display: flex;
 }
 
+@media screen and (min-width: 526px) {
+    div.panel {
+        font-size: 3rem 
+    }
+}
+
+@media screen and (min-width: 301px) and (max-width: 525px) {
+    div.panel {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    div.panel {
+        font-size: 1.5rem;
+    }
+}
+
 .panel {
     color: var(--color-white);
     flex: 1;
@@ -94,4 +112,9 @@ p {
 
 .panel:first-child p {
     border-left: none;
+}
+
+a, a:hover, a:focus, a:active, a:visited {
+    text-decoration: none;
+    color: inherit;
 }
