--- a/style.css
+++ b/style.css
@@ -19,13 +19,28 @@ html, body {
     box-sizing: inherit;
 }
 
+header {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: 2;
+    padding: 1.5rem;
+    background-color: var(--color-offwhite);
+
+    color: var(--color-black);
+    font-size: 6vw;
+    text-align: center;
+    letter-spacing: .4rem;
+    word-spacing: .8rem;
+}
+
 .panel-container {
     min-height: 100vh;
     display: flex;
 }
 
 .panel {
-    color: var(--color-white);
+    color: var(--color-offwhite);
     flex: 1;
     text-align: center;
     align-items: center;
