--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 html, body {
     box-sizing: border-box;
+    height: 100%;
     font-size: 62.5%;
     font-family: 'lato';
     font-weight: 800;
@@ -35,7 +36,7 @@ header {
 }
 
 .panel-container {
-    min-height: 100vh;
+    height: 100%;
     display: flex;
 }
 
