--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ nav {
 .panel-backdrop {
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
 
     justify-content: center;
     display: flex;
