--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav {
 .panel-backdrop {
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(1.5px);
 
     justify-content: center;
     display: flex;
@@ -103,19 +103,25 @@ nav {
         url('');
 }
 
-p {
+button {
+    width: 100%;
+    color: var(--color-offwhite);
+    font: inherit;
+    text-align: center;
+    border: none;
     border-right: .1rem solid var(--color-offwhite);
     border-left: .1rem solid var(--color-offwhite);
     padding-top: 1rem;
     padding-bottom: 1.3rem;
     background-color: var(--color-black);
+    cursor: pointer;
 }
 
-.panel:last-child p {
+.panel:last-child button {
     border-right: none;
 }
 
-.panel:first-child p {
+.panel:first-child button {
     border-left: none;
 }
 
