added fallback bg img for panel-music

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ nav {
 }
 
 .panel-music { 
+    background-image: url('static/music-background.png'); /* fallback */
     background-image: linear-gradient(
         to right bottom,
         transparent,
